# Chuckie-Egg

./: .gitignore  Makefile.am  Makefile.in  PXML.xml  aclocal.m4  audio-alsa.c  audio-sdl.c  audio.c  build_model.py  chuckie.c  chuckie.h  configure  configure.ac  data.h  gl.c  gl2.c  leveldata.c  model.h  ncurses.c  offsets.txt  ram.c  raster.h  raster_4bit.c  sdl-input.c  sdl.c  spritedata.c  spritedata.h
models/: duck.x3d  egg.x3d  farmer.x3d  grain.x3d  ladder.x3d  lift.x3d  wall.x3d
models/blender/: Makefile  blender_export.py  duck.blend  egg.blend  farmer.blend  grain.blend  ladder.blend  lift.blend  wall.blend
